--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-beautifulsoup4==4.7.1
-Django==2.1.7
+Django==2.2.4
 django-appconf==1.0.3
-django-ckeditor==5.7.1
 django-imagekit==4.0.2
-django-js-asset==1.2.2
 pilkit==2.0
 Pillow==6.1.0
-pygame==1.9.4
-pytz==2018.9
+pytz==2019.2
 six==1.12.0
-soupsieve==1.9.1
+sqlparse==0.3.0
