--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,12 @@ defusedxml==0.6.0
 Django==2.1.7
 django-appconf==1.0.3
 django-ckeditor==5.7.1
+django-disqus==0.5
 django-imagekit==4.0.2
 django-js-asset==1.2.2
 django-summernote==0.8.11.4
 idna==2.8
+mock==3.0.5
 oauthlib==3.1.0
 pilkit==2.0
 Pillow==6.1.0
