--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ defusedxml==0.6.0
 Django==2.1.7
 django-appconf==1.0.3
 django-ckeditor==5.7.1
+django-haystack==2.8.1
 django-imagekit==4.0.2
 django-js-asset==1.2.2
 idna==2.8
@@ -21,3 +22,4 @@ requests-oauthlib==1.2.0
 six==1.12.0
 soupsieve==1.9.1
 urllib3==1.25.3
+Whoosh==2.7.4
